# wolfy

./: .gitignore  AGENTS.md  Cargo.toml  ENTERPRISE_REFACTOR_PLAN.md  Install-JetBrainsMonoNerdFont.ps1  build.rs  core.rasi  default.rasi  extensions.toml.example  tasks.toml  theme_picker.rasi
scripts/: build.sh  sign-release.ps1
src/: animation.rs  app.rs  cwd_history.rs  grid_window.rs  lib.rs  log.rs  main.rs  mode.rs  pr_reviews.rs  pty.rs  state.rs  task_runner.rs  tasks.rs  terminal.rs
src/adapters/controllers/: search_controller.rs  window_controller.rs
src/adapters/gateways/: file_history_gateway.rs
src/adapters/presenters/: search_presenter.rs  theme_presenter.rs
src/adapters/views/: mod.rs  search_view.rs  window_view.rs
src/application/: mod.rs
src/application/dto/: mod.rs  theme_dto.rs
src/application/ports/: filesystem_port.rs
src/application/services/: command_handler.rs  mod.rs  timer_service.rs  window_manager.rs
src/application/use_cases/: launch_app.rs
src/domain/: errors.rs
src/domain/entities/: mod.rs  task.rs  window_state.rs
src/domain/repositories/: history_repository.rs  icon_repository.rs  mod.rs  theme_repository.rs
src/domain/services/: theme_resolver.rs
src/domain/value_objects/: mod.rs  rect.rs
src/infrastructure/: animation.rs  composition_root.rs  parser.rs  win32.rs
src/layout/: engine.rs
src/platform/: mod.rs
src/platform/win32/: apps.rs  dpi.rs  event.rs  filewatcher.rs  hotkey.rs  icon.rs  mod.rs  render.rs  wallpaper.rs  window.rs
src/shared/: config.rs  logging.rs  mod.rs  services.rs
src/theme/: ast.rs  lexer.rs  mod.rs  theme.lalrpop  tree.rs  types.rs
src/ui/: mod.rs
src/ui/layout/: mod.rs
src/ui/widgets/: mod.rs  traits.rs
src/widget/: base.rs  container.rs  element.rs  gridview.rs  listview.rs  markdown_view.rs  mod.rs  panel.rs  tailview.rs  taskpanel.rs  textbox.rs
themes/: arch_neon.rasi  catppuccin_latte.rasi  catppuccin_mocha.rasi  decay_green.rasi  edge_runner.rasi  frosted_glass.rasi  graphite_mono.rasi  gruvbox_retro.rasi  material_sakura.rasi  nordic_blue.rasi  rose_pine.rasi  synth_wave.rasi  tokyo_night.rasi
